--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <div class="portfolio-container">
             <div class="portfolio-box">
                 <img src="images/images (1).jfif" alt="">
+                <img src="images/images (1).jfif" alt="">
                 <div class="portfolio-layer">
                     <h4>wep Design</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, officiis!</p>
@@ -190,4 +191,3 @@
 </body>
 
 </html>
-
